# xxcalc

./: .gitignore  CMakeLists.txt  README.md  configure
src/apps/: CMakeLists.txt  ttcalc.cpp  xxcalc.cpp
src/calculator/: errors.hpp  evaluator.cpp  evaluator.hpp  functions.hpp  linear_solver.cpp  linear_solver.hpp  node.cpp  node.hpp  parser.cpp  parser.hpp  polynomial_calculator.cpp  polynomial_calculator.hpp  tokenizer.cpp  tokenizer.hpp  value.cpp  value.hpp
src/calculator/functions/: arithmetic.cpp  exponentiation.cpp  mathematical.cpp
test/: zero_gen.rb
test/calculator/: evaluator.cpp  functions.cpp  linear_solver.cpp  parser.cpp  polynomial_calculator.cpp  tokenizer.cpp  value.cpp
